Bug fixes, package version updated.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,21 +4,21 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
-    "bcrypt==4.3.0",
-    "fastapi>=0.118.0",
-    "langchain-core>=0.3.76",
-    "langchain-google-genai>=2.1.12",
-    "langgraph>=0.6.8",
-    "langgraph-checkpoint>=2.1.1",
-    "langgraph-checkpoint-postgres>=2.0.24",
-    "passlib>=1.7.4",
-    "psycopg>=3.2.10",
-    "psycopg2-binary>=2.9.10",
-    "pydantic-settings>=2.11.0",
-    "pydantic[email]>=2.11.9",
-    "pyjwt>=2.10.1",
+    "fastapi>=0.127.0",
+    "langchain-core>=1.2.5",
+    "langchain-google-genai>=4.1.2",
+    "langgraph>=1.0.5",
+    "langgraph-checkpoint>=3.0.1",
+    "langgraph-checkpoint-postgres>=3.0.2",
+    #   "psycopg2-binary>=2.9.11",
+    "psycopg[binary]>=3.2.10",
+    "pydantic-settings>=2.12.0",
+    "pydantic[email]>=2.12.5",
     "python-jose>=3.5.0",
-    "python-multipart>=0.0.20",
-    "sqlmodel>=0.0.25",
-    "uvicorn>=0.37.0",
+    "python-dotenv==1.2.1",
+    "python-multipart>=0.0.21",
+    "sqlmodel>=0.0.30",
+    "uvicorn>=0.40.0",
+    "pyjwt>=2.10.1",
+    "passlib[argon2]>=1.7.4",
 ]
